--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 
         "os/",
         "log/",
+        "web/",
         "func/",
         "ject/",
         "error/",
@@ -21,7 +22,7 @@
     ],
     "author": "Yakhin Nikita Artemovich <mr.y.nikita@gmail.com>",
     "license": "Apache-2.0",
-    "version": "0.3.0",
+    "version": "0.4.0",
     "keywords": [
 
         "y",
