--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "url": "https://github.com/MrYNikita/YModules/issues"
 
     },
+    "icon": "logo.png",
     "files": [
 
         "os/",
@@ -22,7 +23,7 @@
     ],
     "author": "Yakhin Nikita Artemovich <mr.y.nikita@gmail.com>",
     "license": "Apache-2.0",
-    "version": "0.6.5",
+    "version": "0.6.6",
     "keywords": [
 
         "y",
