--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
         "array/",
         "number/",
         "string/",
+        "config.mjs",
         "README.md",
         "LICENSE.md"
 
     ],
     "author": "Yakhin Nikita Artemovich <mr.y.nikita@gmail.com>",
     "license": "Apache-2.0",
-    "version": "0.11.1",
+    "version": "0.11.2",
     "keywords": [
 
         "y",
