--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
         "README.md",
         "config.mjs",
         "LICENSE.md",
-        ".extansion/"
+        "cahce.json",
+        "YExtansion/",
+        "manifest.json"
 
     ],
     "author": "Yakhin Nikita Artemovich <mr.y.nikita@gmail.com>",
     "license": "Apache-2.0",
-    "version": "0.15.0",
+    "version": "0.16.1",
     "keywords": [
 
         "y",
