--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     ],
     "author": "Yakhin Nikita Artemovich <mr.y.nikita@gmail.com>",
     "license": "Apache-2.0",
-    "version": "0.28.0",
+    "version": "0.28.1",
+    "scripts": {
+        "y": "cd y && node y.mjs"
+    },
     "keywords": [
         "y",
         "module",
