--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     ],
     "author": "Yakhin Nikita Artemovich <mr.y.nikita@gmail.com>",
     "license": "Apache-2.0",
-    "version": "0.47.4",
+    "version": "0.48.0",
     "scripts": {
-        "y": "cd y && node y.mjs"
+        "y": "cd y && cd ypanel && node ypanel.mjs"
     },
     "keywords": [
         "y",
